<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/blue"
    android:orientation="vertical"
    tools:context=".View.LoginActivity">

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="175dp">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:text="E-Market"
            android:textColor="@color/white"
            android:textSize="24sp"
            android:textStyle="bold" />

    </FrameLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@drawable/rectangle"
        android:elevation="4dp"
        android:orientation="vertical">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginVertical="20dp"
            android:text="Giriş Yap"
            android:textColor="@color/black"
            android:textSize="20sp"
            android:textStyle="bold" />

        <EditText
            android:id="@+id/login_email"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_gravity="center_horizontal"
            android:layout_marginHorizontal="20dp"
            android:layout_marginTop="20dp"
            android:background="@drawable/edit_text_background"
            android:ems="10"
            android:hint="E-posta"
            android:inputType="textEmailAddress"
            android:paddingHorizontal="10dp" />

        <EditText
            android:id="@+id/login_password"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_gravity="center_horizontal"
            android:layout_marginHorizontal="20dp"
            android:layout_marginVertical="30dp"
            android:background="@drawable/edit_text_background"
            android:ems="10"
            android:hint="Şifre"
            android:inputType="textPassword"
            android:paddingHorizontal="10dp" />

        <Button
            android:id="@+id/login_button"
            android:layout_width="match_parent"
            android:layout_height="55dp"
            android:layout_marginHorizontal="20dp"
            android:backgroundTint="@color/brown"
            android:onClick="login"
            android:text="Giriş Yap"
            android:textSize="16sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/login_to_register"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginVertical="20dp"
            android:onClick="loginToRegister"
            android:text="Hesabın yok mu? KAYIT OL"
            android:textColor="@color/grey"
            android:textSize="16sp" />

    </LinearLayout>

</LinearLayout>