<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".View.RegisterActivity">

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/toolbar_register"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:title="Yeni Bir Hesap Oluştur" />

    <EditText
        android:id="@+id/register_first_name"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_gravity="center_horizontal"
        android:layout_marginHorizontal="20dp"
        android:layout_marginVertical="15dp"
        android:background="@drawable/edit_text_background"
        android:ems="10"
        android:hint="Ad"
        android:inputType="text"
        android:paddingHorizontal="10dp" />

    <EditText
        android:id="@+id/register_last_name"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_gravity="center_horizontal"
        android:layout_marginHorizontal="20dp"
        android:layout_marginVertical="15dp"
        android:background="@drawable/edit_text_background"
        android:ems="10"
        android:hint="Soyad"
        android:inputType="text"
        android:paddingHorizontal="10dp" />

    <EditText
        android:id="@+id/register_email"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_gravity="center_horizontal"
        android:layout_marginHorizontal="20dp"
        android:layout_marginVertical="15dp"
        android:background="@drawable/edit_text_background"
        android:ems="10"
        android:hint="E-posta"
        android:inputType="textEmailAddress"
        android:paddingHorizontal="10dp" />

    <EditText
        android:id="@+id/register_password_first"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_gravity="center_horizontal"
        android:layout_marginHorizontal="20dp"
        android:layout_marginVertical="15dp"
        android:background="@drawable/edit_text_background"
        android:ems="10"
        android:hint="Şifre"
        android:inputType="textPassword"
        android:paddingHorizontal="10dp" />

    <EditText
        android:id="@+id/register_password_second"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_gravity="center_horizontal"
        android:layout_marginHorizontal="20dp"
        android:layout_marginVertical="15dp"
        android:background="@drawable/edit_text_background"
        android:ems="10"
        android:hint="Şifre Tekrar"
        android:inputType="textPassword"
        android:paddingHorizontal="10dp" />

    <Button
        android:id="@+id/register_button"
        android:layout_width="match_parent"
        android:layout_height="55dp"
        android:layout_marginHorizontal="20dp"
        android:layout_marginTop="10dp"
        android:backgroundTint="@color/brown"
        android:onClick="register"
        android:text="Kayıt Ol"
        android:textSize="16sp"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/register_to_login"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_marginVertical="20dp"
        android:onClick="registerToLogin"
        android:text="Zaten bir hesabın var mı? GİRİŞ YAP"
        android:textColor="@color/grey"
        android:textSize="16sp" />

</LinearLayout>